[package]
name = "ybc"
version = "0.4.0"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Tom Grushka <tom@dra11y.com>", "Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/thedodd/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display"] }
web-sys = { version = "0.3", features = ["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }

[features]
default = ["router"]
router = ["yew-router"]
docinclude = []         # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
