[package]
name = "theme"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
gloo-console = "0.3"
wasm-bindgen = "0.2"
ybc = { path = "../../", features = ["scroll-spy"] }
yew = "0.21"
js-sys = "0.3"
gloo-timers = "0.3"
derive_more = { version = "2", default-features = false, features = ["display"] }
strum = { version = "0.27.2", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Element", "HtmlElement", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomRectReadOnly", "DomRect", "Location", "History"]

[features]
default = []
demo-abc = []
demo-xyz = []
